Bug fix: Overflow hidden causing issue in smaller screens

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-html, body {margin: 0; height: 100%; overflow: hidden}
+/*html, body {margin: 0; height: 100%; overflow: hidden}*/
 
 /* The Modal (background) */
 .modal {
